--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <style>
+      html {
+        background-color: #222222;
+      }
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      canvas {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+      }
+    </style>
   </head>
   <body>
   </body>
