add airconsole sdk

--- a/screen.html
+++ b/screen.html
@@ -17,6 +17,7 @@
         transform: translateX(-50%) translateY(-50%);
       }
     </style>
+    <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.7.0.js"></script>
   </head>
   <body>
   </body>
